[package]
name = "fishing-rod"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
pyo3 = { version = "0.22.1", features = ["auto-initialize"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
