[package]
name = "fishing-rod"
version = "0.1.0"
edition = "2021"
authors = ["Karl robeck alferez <karlalferezfx@gmail.com>"]


[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
dotenv = "0.15.0"
futures-util = "0.3.30"
pyo3 = { version = "0.22.1", features = ["auto-initialize"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
struct_iterable = "0.1.1"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
tungstenite = "0.23.0"
url = "2.5.2"
