[tool.poetry]
name = "fishing-rod"
version = "0.1.0"
description = ""
authors = ["karlrobeck <karlalferezfx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
metatrader5 = "^5.0.4424"
numpy = "1.26.4"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
